--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<!doctype html>
+<!<!DOCTYPE html>
 <html>
+<meta charset="utf-8">
+
 <head>
-  <title> WEB</title>
+  <title>단어사전</title>
+  <h1><a href="index.html">단어사전</a></h1>
+
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">html</a></li>
-    <li><a href="2.html">java</a></li>
-  </ol>
-<br>
-web의 기초 홈화면<br><br>
+  <ul>
+      <li><a href="HTML.html">HTML</a></li>
+    <li><a href="CSS.html">CSS</a></li>
+    <li><a href="Javascript.html">Javascript</a></li>
+  </ul> <br><br><br>
 
-<img src = "web.jpg" width="500">
+  <img src="frontimg.GIF" width="600">
+
 </body>
